# redges

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  OWNERS  README.md  rust-toolchain.toml
benches/: resolution.rs
docs/: redge.typ
examples/: edge_simplification.rs  simple_test.rs  test_bed.rs  test_build.rs  wavefront_loader.rs
src/: binary_heap.rs  container_trait.rs  edge_handle.rs  face_handle.rs  hedge_handle.rs  helpers.rs  iterators.rs  lib.rs  mesh_deleter.rs  p_queue.rs  quadric_simplification.rs  quadrics.rs  queue.rs  validation.rs  vert_handle.rs  wavefront_loader.rs  wedge.rs
src/algorithms/: mod.rs  pqueue.rs  quadric_simplification.rs  quadrics.rs  queue.rs  remeshing.rs
