[package]
name = "redges"
version = "0.1.0"
edition = "2021"

authors = ["Camilo Talero <camilo.talero@fslabs.ca>"]

[dependencies]
linear_isomorphic = "0.2.4"
nalgebra = "0.33.0"
num = "0.4.3"
num-traits = "0.2.19"
ordered-float = "4.2.2"
priority-queue = "2.1.0"

[profile.release-with-debug]
inherits = "release"
debug = true
