[package]
name = "redges"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE.md"
authors = ["Camilo Talero <camilo.talero@fslabs.ca>"]
description = "A radial edge is a data structure for topological operations."

[dependencies]
linear_isomorphic = "0.2.4"
nalgebra = "0.33.0"
num = "0.4.3"
num-traits = "0.2.19"
ordered-float = "4.2.2"
priority-queue = "2.1.1"
rstar = "0.12.0"

[dev-dependencies]
criterion = "0.5.1"
nalgebra = "0.33.0"
spade = "2.13.1"

[[bench]]
name = "resolution"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = true

[package.metadata.fslabs.publish.cargo]
allow_public = true
publish = true
